{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 20,
  "lineage": "7cb4827d-fbde-caab-bc78-8913b00a9d57",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:security-group/sg-03ec5b79a23075b55",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-03ec5b79a23075b55",
            "ingress": [],
            "name": "mayank-eks1-cluster-cluster-20240702163741478900000009",
            "name_prefix": "mayank-eks1-cluster-cluster-",
            "owner_id": "058264111519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "mayank-eks1-cluster-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mayank-eks1-cluster-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:security-group/sg-000eb31a2f1936968",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-000eb31a2f1936968",
            "ingress": [],
            "name": "mayank-eks1-cluster-node-20240702163741477100000008",
            "name_prefix": "mayank-eks1-cluster-node-",
            "owner_id": "058264111519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "mayank-eks1-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/mayank-eks1-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mayank-eks1-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/mayank-eks1-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3278608512",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ec5b79a23075b55",
            "security_group_rule_id": "sgr-0ad23d922086260b2",
            "self": false,
            "source_security_group_id": "sg-000eb31a2f1936968",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-364424837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-000eb31a2f1936968",
            "security_group_rule_id": "sgr-08c94ca08dc254051",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4149600602",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000eb31a2f1936968",
            "security_group_rule_id": "sgr-04ccada38e0b94203",
            "self": false,
            "source_security_group_id": "sg-03ec5b79a23075b55",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3188464413",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000eb31a2f1936968",
            "security_group_rule_id": "sgr-0f40d0cab39ad5f41",
            "self": false,
            "source_security_group_id": "sg-03ec5b79a23075b55",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2001632395",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000eb31a2f1936968",
            "security_group_rule_id": "sgr-05d62aa7c1a731f36",
            "self": false,
            "source_security_group_id": "sg-03ec5b79a23075b55",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1678917802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000eb31a2f1936968",
            "security_group_rule_id": "sgr-0eb27a94ff26c688a",
            "self": false,
            "source_security_group_id": "sg-03ec5b79a23075b55",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-11760481",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000eb31a2f1936968",
            "security_group_rule_id": "sgr-08862b01635be940a",
            "self": false,
            "source_security_group_id": "sg-03ec5b79a23075b55",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3879356170",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000eb31a2f1936968",
            "security_group_rule_id": "sgr-07bbb36890c633488",
            "self": false,
            "source_security_group_id": "sg-03ec5b79a23075b55",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-665620903",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000eb31a2f1936968",
            "security_group_rule_id": "sgr-01ca10dd99f2d5ad9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-321969265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000eb31a2f1936968",
            "security_group_rule_id": "sgr-08e00bb5ce4ace7b0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3077537694",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-000eb31a2f1936968",
            "security_group_rule_id": "sgr-00d4f10c58d8a3702",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:network-acl/acl-0eea129cf989fa221",
            "default_network_acl_id": "acl-0eea129cf989fa221",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0eea129cf989fa221",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "058264111519",
            "subnet_ids": [
              "subnet-047689521c414befa",
              "subnet-05dfaac828aecc74d",
              "subnet-061b6b409130a19a6",
              "subnet-094895fa495a5f575",
              "subnet-0a2cf9b8022f658ad",
              "subnet-0d0c603896db566cf"
            ],
            "tags": {
              "Name": "eks-cluster-vpc-default",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-default",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:route-table/rtb-08ebb51472537c729",
            "default_route_table_id": "rtb-08ebb51472537c729",
            "id": "rtb-08ebb51472537c729",
            "owner_id": "058264111519",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "eks-cluster-vpc-default",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-default",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:security-group/sg-0d70cd511845a1d8e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d70cd511845a1d8e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "058264111519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-vpc-default",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-default",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b30c6ea6b19bd422",
            "arn": "arn:aws:ec2:ap-south-1:058264111519:elastic-ip/eipalloc-0b30c6ea6b19bd422",
            "domain": "vpc",
            "id": "eipalloc-0b30c6ea6b19bd422",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-145-4.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.145.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-cluster-vpc-ap-south-1a",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-ap-south-1a",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:internet-gateway/igw-04df198022432ffbd",
            "id": "igw-04df198022432ffbd",
            "owner_id": "058264111519",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b30c6ea6b19bd422",
            "association_id": "eipassoc-078708df782ed020c",
            "connectivity_type": "public",
            "id": "nat-011764df2304d07af",
            "network_interface_id": "eni-09f27e85d32a4fb90",
            "private_ip": "10.0.1.55",
            "public_ip": "13.202.145.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-047689521c414befa",
            "tags": {
              "Name": "eks-cluster-vpc-ap-south-1a",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-ap-south-1a",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-048fb142b443cb1b51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-011764df2304d07af",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-048fb142b443cb1b5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04df198022432ffbd",
            "id": "r-rtb-005c8a956cbf38fc61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005c8a956cbf38fc6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:route-table/rtb-048fb142b443cb1b5",
            "id": "rtb-048fb142b443cb1b5",
            "owner_id": "058264111519",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-cluster-vpc-private",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-private",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:route-table/rtb-005c8a956cbf38fc6",
            "id": "rtb-005c8a956cbf38fc6",
            "owner_id": "058264111519",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-cluster-vpc-public",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-public",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca75a5e84a02b65c",
            "route_table_id": "rtb-048fb142b443cb1b5",
            "subnet_id": "subnet-061b6b409130a19a6"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2b6a8c3d0e3953e",
            "route_table_id": "rtb-048fb142b443cb1b5",
            "subnet_id": "subnet-05dfaac828aecc74d"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce4905ebcd6ad190",
            "route_table_id": "rtb-048fb142b443cb1b5",
            "subnet_id": "subnet-094895fa495a5f575"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0727a2db41434c7c6",
            "route_table_id": "rtb-005c8a956cbf38fc6",
            "subnet_id": "subnet-047689521c414befa"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099a3b00707afc218",
            "route_table_id": "rtb-005c8a956cbf38fc6",
            "subnet_id": "subnet-0d0c603896db566cf"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4f1d72f5c2b86bd",
            "route_table_id": "rtb-005c8a956cbf38fc6",
            "subnet_id": "subnet-0a2cf9b8022f658ad"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:subnet/subnet-061b6b409130a19a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061b6b409130a19a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264111519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-cluster-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/internal_elb": "1"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/internal_elb": "1"
            },
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:subnet/subnet-05dfaac828aecc74d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dfaac828aecc74d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264111519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-cluster-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/internal_elb": "1"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/internal_elb": "1"
            },
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:subnet/subnet-094895fa495a5f575",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094895fa495a5f575",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264111519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-cluster-vpc-private-ap-south-1c",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/internal_elb": "1"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-private-ap-south-1c",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/internal_elb": "1"
            },
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:subnet/subnet-047689521c414befa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047689521c414befa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264111519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-cluster-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:subnet/subnet-0d0c603896db566cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0c603896db566cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264111519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-cluster-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:subnet/subnet-0a2cf9b8022f658ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2cf9b8022f658ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264111519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-cluster-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02a567ae124d61469"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264111519:vpc/vpc-02a567ae124d61469",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eea129cf989fa221",
            "default_route_table_id": "rtb-08ebb51472537c729",
            "default_security_group_id": "sg-0d70cd511845a1d8e",
            "dhcp_options_id": "dopt-0b8ccbedd571ef719",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a567ae124d61469",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ebb51472537c729",
            "owner_id": "058264111519",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/mayank-eks1-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}